Fix team section mobile layout

--- a/src/spa/src/components/about/about.scss
+++ b/src/spa/src/components/about/about.scss
@@ -489,8 +489,8 @@ About Style
          }
 
          .box {
-            width: 210px;
-            height: 250px;
+            width: 225px;
+            height: 275px;
             @include border-radius(25px);
             margin: 16px;
             position: relative;
@@ -529,21 +529,24 @@ About Style
 
                .profile-container {
                   position: absolute;
-                  padding-top: 60px;
+                  padding-top: 70px;
                   width: 100%;
                   height: 100%;
                   opacity: 0;
                   transform: translateY(30px);
                   transition: .5s ease;
-
+                  @media (max-width:600px) {
+                    padding-top: 40px !important;
+                  }
                   .social,
                   h3,
                   p {
                      color: white;
                      position: relative;
                      z-index: 2;
-                     width: 85%;
+                     width: 100%;
                      text-align: center;
+                     line-height: normal;
                   }
                   h3 {
                     display: flex;
@@ -752,7 +755,7 @@ About Style
                z-index: 2;
                opacity: 0.2;
                transition: .5s ease;
-
+               
                .profile-container {
                   position: absolute;
                   padding-top: 60px;
@@ -761,7 +764,9 @@ About Style
                   opacity: 0;
                   transform: translateY(30px);
                   transition: .5s ease;
-
+                  @media (max-width:600px) {
+                    padding-top: 40px !important;
+                  }
                   .social,
                   h3,
                   p {
@@ -770,6 +775,7 @@ About Style
                      z-index: 2;
                      width: 90%;
                      text-align: center;
+                     line-height: normal;
                   }
                   h3 {
                     display: flex;
